# brainscale

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  changelog.md  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI-daily.yml  CI.yml  Publish.yml
brainscale/: __init__.py  _algorithms.py  _base.py  _compatible_imports.py  _connections.py  _dynamics.py  _elementwise.py  _errors.py  _etrace_algorithms.py  _etrace_algorithms_test.py  _etrace_compiler.py  _etrace_compiler_base.py  _etrace_compiler_base_test.py  _etrace_compiler_graph.py  _etrace_compiler_graph_test.py  _etrace_compiler_hid_param_op.py  _etrace_compiler_hid_param_op_test.py  _etrace_compiler_hidden_group.py  _etrace_compiler_hidden_group_test.py  _etrace_compiler_hidden_pertubation.py  _etrace_compiler_hidden_pertubation_test.py  _etrace_compiler_module_info.py  _etrace_compiler_module_info_test.py  _etrace_compiler_test.py  _etrace_compiler_util.py  _etrace_compiler_util_test.py  _etrace_concepts.py  _etrace_concepts_test.py  _etrace_debug_jaxpr2code.py  _etrace_debug_visualize.py  _etrace_graph.py  _etrace_graph_executor.py  _etrace_graph_executor_test.py  _etrace_graph_test.py  _etrace_input_data.py  _etrace_input_data_test.py  _etrace_model_test.py  _etrace_model_with_group_state.py  _etrace_operators.py  _etrace_operators_old.py  (+21 more)
brainscale/jaxpr_viz/: __init__.py  graph.py  graph_utils.py  styling.py  utils.py
brainscale/nn/: __init__.py  _connections.py  _conv.py  _elementwise.py  _linear.py  _neurons.py  _normalizations.py  _poolings.py  _rate_rnns.py  _readout.py  _rnn.py  _synapses.py
brainscalon/: __init__.py  _etrace_algorithms.py  _etrace_compiler_base.py  _etrace_compiler_graph.py  _etrace_compiler_graph_test.py  _etrace_compiler_hid_param_op.py  _etrace_compiler_hid_param_op_test.py  _etrace_compiler_hidden_group.py  _etrace_compiler_hidden_group_test.py  _etrace_compiler_hidden_pertubation.py  _etrace_compiler_hidden_pertubation_test.py  _etrace_compiler_module_info.py  _etrace_compiler_module_info_test.py  _etrace_concepts.py  _etrace_concepts_test.py  _etrace_graph_executor.py  _etrace_graph_executor_test.py  _etrace_input_data.py  _etrace_input_data_test.py  _etrace_model_test.py  _etrace_model_with_group_state.py  _etrace_operators.py  _etrace_vjp_algorithms.py  _etrace_vjp_algorithms_test.py  _etrace_vjp_graph_executor.py  _etrace_vjp_graph_executor_test.py  _grad_exponential.py  _misc.py  _typing.py
brainscalon/nn/: _conv.py  _elementwise.py  _linear.py  _neurons.py  _normalizations.py  _poolings.py  _rate_rnns.py  _readout.py  _synapses.py
dev/: try_compiler.py
docs/: api.rst  auto_generater.py  conf.py  index.rst
docs/advanced/: IR_analysis-en.ipynb  IR_analysis-zh.ipynb  limitations-en.ipynb  limitations-zh.ipynb  online_algorithm_customization-en.ipynb  online_algorithm_customization-zh.ipynb
docs/apis/: algorithms.rst  base.rst  changelog.md  compiler.rst  concepts.rst  dynamics.rst  layers.rst  nn.rst  online_algorithms.rst  operator.rst  tools.rst
examples/: 000-lif-snn-for-nmnist.py  000-snn-on-working-memory-task.py  001-gif-snn-for-dms.py  002-coba-ei-rsnn.py  002-lif-snn-for-nmnist.py  003-memory-and-speed-evaluation.py  003-snn-memory-and-speed-evaluation-all.py  003-snn-memory-and-speed-evaluation-batched.py  003-snn-memory-and-speed-evaluation-vmap.py  003-snn-memory-and-speed-evaluation.py  004-feedforward-conv-snn.py  005-coba-ei-rsnn.py  100-gru-on-copying-task.py  README.md  dvs-gesture-preprocessing.py  rnn-on-copying-task.py  snn-on-working-memory-task.py  snn_models.py  utils.py
(+22 files in other folders)
