[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
exclude = [
    "docs*",
    "tests*",
    "examples*",
    "build*",
    "dist*",
    "dev*",
    "brainscalon.egg-info*",
    "brainscalon/__pycache__*",
    "brainscalon/__init__.py",
]


[tool.distutils.bdist_wheel]
universal = true


[project]
name = "brainscalon"
description = "Enabling Scalable Online Learning for Brain Dynamics."
readme = 'README.md'
license = { text = 'Apache-2.0 license' }
requires-python = '>=3.9'
authors = [{ name = 'BrainScale Developers', email = 'chao.brain@qq.com' }]
classifiers = [
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
]


keywords = ["brain simulation", "brain-inspired computing"]

dependencies = [
    'brainstate>=0.1.0',
    'brainunit',
]

dynamic = ['version']

[tool.flit.module]
name = "brainscalon"

[project.urls]
homepage = 'http://github.com/chaobrain/brainscalon'
repository = 'http://github.com/chaobrain/brainscalon'

[project.optional-dependencies]
testing = [
    'pytest',
]
